--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="style.css">
   <script defer src="script.js"></script>
 </head>
 <body>
@@ -23,7 +24,7 @@
     <br>
     <div id="library">
       <h2>Library</h2>
-      <!--Make a table-->
+      <!--TODO: Make a table-->
       <div class="books"></div>
     </div>
   </div>
